# motor_drivers_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  cpkg  motor_drivers_cpp.ioc
Modules/BasicComponents/: CMakeLists.txt
Modules/BasicComponents/bsp/can_driver/: CMakeLists.txt  cpkg.toml
Modules/BasicComponents/bsp/gpio_driver/: CMakeLists.txt  cpkg.toml  gpio_driver.c  gpio_driver.h  pwm.h
Modules/BasicComponents/libs/mit_pd/: CMakeLists.txt  cpkg.toml  mit_pd.cpp  mit_pd.hpp
Modules/BasicComponents/libs/pid_motor/: CMakeLists.txt  cpkg.toml  pid_motor.hpp
Modules/BasicComponents/libs/pid_pd/: CMakeLists.txt  cpkg.toml  pid_pd.cpp  pid_pd.hpp
Modules/BasicComponents/libs/printf/: CMakeLists.txt  cpkg.toml
Modules/BasicComponents/services/watchdog/: CMakeLists.txt  cpkg.toml  watchdog.cpp  watchdog.hpp
Modules/MotorDrivers/: CMakeLists.txt
Modules/MotorDrivers/controllers/: CMakeLists.txt  cpkg.toml  motor_pos_controller.cpp  motor_pos_controller.hpp  motor_vel_controller.cpp  motor_vel_controller.hpp
Modules/MotorDrivers/core/: CMakeLists.txt  cpkg.toml  motor_if.hpp
Modules/MotorDrivers/motors/: CMakeLists.txt
Modules/MotorDrivers/motors/DJI/: CMakeLists.txt  cpkg.toml  dji.cpp  dji.hpp
Modules/PathPlannings/: CMakeLists.txt
Modules/PathPlannings/SCurve/: CMakeLists.txt  cpkg.toml
Modules/PathPlannings/SCurve/simulation/: plot_chassis_display.py  s_curve.py
Modules/PathPlannings/SCurve/src/: s_curve.cpp  s_curve.hpp
Modules/PathPlannings/Trajectory/: CMakeLists.txt
Modules/PathPlannings/Trajectory/MotorTrajectory/: CMakeLists.txt  cpkg.toml  motor_trajectory.cpp  motor_trajectory.hpp
Modules/PathPlannings/VelocityProfile/Core/: CMakeLists.txt
Modules/PathPlannings/VelocityProfile/SCurve/: CMakeLists.txt
Modules/PathPlannings/VelocityProfile/SCurve/simulation/: plot_display.py
Modules/PathPlannings/VelocityProfile/SCurve/src/: s_curve.cpp  s_curve.hpp
UserCode/: init-macros.hpp  macros.hpp
UserCode/app/: app.c  app.cpp  app.hpp  chassis.cpp  chassis.hpp  device.cpp  device.hpp  elevator.cpp  elevator.hpp
UserCode/bsp/: can_driver.c  can_driver.h
UserCode/controllers/: motor_pos_controller.cpp  motor_pos_controller.hpp  motor_vel_controller.cpp  motor_vel_controller.hpp
UserCode/drivers/: dji.cpp  dji.hpp
UserCode/interfaces/: motor_if.hpp
UserCode/libs/: pid_motor.cpp  pid_motor.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
